--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Joseph Wang">
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React-Shopping-Cart</React-Shopping-></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +41,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyBw1fDk0QAFtRLSsOh7dkKyOXwFizENbT0",
+      authDomain: "shopping-cart-cs497.firebaseapp.com",
+      databaseURL: "https://shopping-cart-cs497.firebaseio.com",
+      projectId: "shopping-cart-cs497",
+      storageBucket: "shopping-cart-cs497.appspot.com",
+      messagingSenderId: "418718404732",
+      appId: "1:418718404732:web:6898f1a7cc48d1bcdf39f9"
+      };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
+  
 </html>
