--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
     -->
     <title>React-Shopping-Cart</React-Shopping-></title>
   </head>
-  <body>
+  <body width:100%;height:100%;margin:0>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
